draft 2 of html templates

--- a/about.html
+++ b/about.html
@@ -8,11 +8,7 @@
 <h1> About Sarah </h1>
 
 <section>
-  I am a digital strategist living in Seattle and a student of Ada Developers Academy 4th cohort.
-  From September 2015 through September 2016, I will be learning front-end web development with the end-goal
-  of becoming a software engineer. I am also exploring how to increase digital equity in the city of Seattle
-  through the Department of Neighborhoods Peoples Academy for Community Engagement program.
-  My previous professional experience includes working on online marketing for a number of software startups.
+  I am a digital strategist living in Seattle and a student of Ada Developers Academy 4th cohort. Yeehaw!
 </section>
 
 <h2> Activities & issues I spend my time on: </h2>
@@ -44,6 +40,8 @@
       <li> City of Seattle Technology Matching Fund grant reader </li>
 
     </ul>
+
+    <img src="https://fbcdn-photos-a-a.akamaihd.net/hphotos-ak-frc3/v/t1.0-0/p480x480/558589_10200359418099686_1061330175_n.jpg?oh=946591275528e09cc036c0f238257c1b&oe=568A54C9&__gda__=1456362457_27fcdccdf55d751ce92f82144129a546" style= "width: 50%; height: 50%" alt="Sarah Trowbridge">
 
 </body>
 
